# Frist-Project-In-C

./: CMakeLists.txt  Payments.c  Payments.h  clients.c  clients.h  cmake-build-debug.rar  main.c  menu.c  menu.h  menus.c  menus.h  reservations.c  reservations.h  statistics.c  statistics.h  tables.h  takeaway.c  takeaway.h  utils.h
