cmake_minimum_required(VERSION 3.17)
project(Trabalho_Final C)

set(CMAKE_C_STANDARD 99)

add_executable(Trabalho_Final main.c menu.h menu.c utils.h menus.h menus.c clients.h clients.c takeaway.h takeaway.c reservations.h reservations.c tables.h tables.c Payments.h Payments.c statistics.h statistics.c)